--- a/09-tip_calculator_app/index.html
+++ b/09-tip_calculator_app/index.html
@@ -12,14 +12,13 @@
 
 <body>
 <main>
-    <section class="split-bill-section">
-        <div class="heading-container">
+    <section class="bill-section">
+        <div class="heading__wrapper">
             <h1 class="primary-heading">SPLI <br> TTER</h1>
         </div>
 
         <div class="container grid grid--2-columns">
             <div class="user-input-container">
-
                 <div class="bill">
                     <div class="flex">
                         <label class="label-heading" for="bill-input">Bill</label>
