--- a/10-intro_component_with_sign_up_form/index.html
+++ b/10-intro_component_with_sign_up_form/index.html
@@ -15,12 +15,12 @@
 
 <main>
     <section class="form-section">
-        <div class="container">
-            <div class="text-content">
-                <h1 class="primary-heading">
+        <div class="card container">
+            <div class="card__text-content">
+                <h1 class="card__heading primary-heading">
                     Learn to code by watching others
                 </h1>
-                <p class="text">
+                <p class="card__text">
                     See how experienced developers solve problems in real-time. Watching scripted tutorials is great,
                     but understanding how developers think is invaluable.
                 </p>
@@ -65,16 +65,11 @@
                     </p>
                 </div>
             </div>
-            <div class="thank-you-container">
-                <ion-icon class="trophy-icon" name="trophy-outline"></ion-icon>
-                <p class="thank-you-message">Congratulations, you have successfully claimed you free trial !</p>
-            </div>
-
         </div>
     </section>
 </main>
 
-<script src="javascript/script.js"></script>
+<script src="js/script.js"></script>
 </body>
 </html>
 
