--- a/11-sunnyside_agency_landing_page/index.html
+++ b/11-sunnyside_agency_landing_page/index.html
@@ -6,81 +6,76 @@
     <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/general.css">
-    <link rel="stylesheet" href="css/media-queries.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@400;600;700&family=Fraunces:opsz,wght@9..144,700;9..144,900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/main.css">
     <title>Frontend Mentor | Sunnyside Agency landing page</title>
 
 </head>
 <body>
-<header class="header">
-    <div class="main-header">
-        <img src="images/logo.svg" alt="Sunnyside Agency Logo">
-        <nav class="main-nav">
-            <ul class="main-nav-list">
-                <li><a href="#" class="main-nav-link">About</a></li>
-                <li><a href="#" class="main-nav-link">Services</a></li>
-                <li><a href="#" class="main-nav-link">Projects</a></li>
-                <li><a href="#" class="contact-link">Contact</a></li>
+<header class="header-section">
+    <div class="header flex flex--justify-space-between flex--align-center">
+        <a href="#" class="header__logo-wrapper">
+            <img class="header__logo" src="images/logo.svg" alt="Sunnyside Agency Logo">
+        </a>
+
+        <nav class="header__nav flex flex--center">
+            <ul class="header__nav-list flex flex--align-center flex--gap">
+                <li><a href="#" class="header__nav-link">About</a></li>
+                <li><a href="#" class="header__nav-link">Services</a></li>
+                <li><a href="#" class="header__nav-link">Projects</a></li>
+                <li><a href="#" class="header__contact-link">Contact</a></li>
             </ul>
         </nav>
-        <div class="mobile-navigation">
-            <button class="open-btn">
-                <ion-icon name="menu-outline"></ion-icon>
-            </button>
-            <button class="close-btn">
-                <ion-icon name="close-outline"></ion-icon>
-            </button>
-        </div>
+        <button class="header__mobile-nav-toggle"></button>
 
     </div>
-    <h1 class="primary-heading">We are creatives</h1>
-    <div class="down-arrow-container">
-        <a href="#intro-section"><img src="images/icon-arrow-down.svg" alt="down-arrow-icon"></a>
-    </div>
+    <h1 class="header__heading primary-heading">We are creatives</h1>
+    <a class="header__arrow-btn" href="#intro-section"><img src="images/icon-arrow-down.svg" alt="down-arrow-icon"></a>
 </header>
-
-<div class="overlay hidden"></div>
 
 <main>
     <section class="intro-section" id="intro-section">
-        <div class="container grid grid-2-columns">
-            <div class="text-content">
-                <h2 class="secondary-heading">Transform your brand</h2>
-                <p class="text">
+        <div class="intro grid grid--2-columns">
+            <div class="intro__text-content flex flex--column flex--center flex--gap">
+                <h2 class="intro__heading secondary-heading">Transform your brand</h2>
+                <p class="intro__text">
                     We are a full-service creative agency specializing in helping brands grow fast.
                     Engage your clients through compelling visuals that do most of the marketing for you.
                 </p>
-                <button class="learn-more-btn yellow-background">Learn More</button>
+                <button class="intro__btn-learn btn btn--yellow">Learn More</button>
             </div>
-            <div class="image-container egg-image"></div>
+            <div class="intro__image intro__image--transform"></div>
         </div>
 
-        <div class="container grid grid-2-columns">
-            <div class="image-container glass-image"></div>
-            <div class="text-content">
-                <h2 class="secondary-heading">Stand out to the right audience</h2>
-                <p class="text">
+        <div class="intro grid grid--2-columns">
+            <div class="intro__image intro__image--stand-out"></div>
+            <div class="intro__text-content flex flex--column flex--center flex--gap">
+                <h2 class="intro__heading secondary-heading">Stand out to the right audience</h2>
+                <p class="intro__text">
                     Using a collaborative formula of designers, researchers, photographers, videographers, and
                     copywriters,
                     we’ll build and extend your brand in digital places.
                 </p>
-                <button class="learn-more-btn red-background">Learn More</button>
+                <button class="intro__btn-learn btn btn--red">Learn More</button>
             </div>
         </div>
+    </section>
 
-        <div class="container grid grid-2-columns">
-            <div class="graphic-design-content">
-                <h3 class="tertiary-heading">Graphic design</h3>
-                <p class="dark-text">
+    <section class="design-section">
+        <div class="design grid grid--2-columns">
+            <div class="design__card design__card--graphic grid">
+                <h3 class="design__heading tertiary-heading">Graphic design</h3>
+                <p class="design__text">
                     Great design makes you memorable. We deliver artwork that underscores your brand message and
                     captures
                     potential clients’ attention.
                 </p>
             </div>
-            <div class="photography-content">
-                <h3 class="tertiary-heading">Photography</h3>
-                <p class="dark-text">
+            <div class="design__card design__card--photography grid">
+                <h3 class="design__heading tertiary-heading">Photography</h3>
+                <p class="design__text">
                     Increase your credibility by getting the most stunning, high-quality photos that improve your
                     business
                     image.
@@ -90,48 +85,48 @@
     </section>
 
     <section class="testimonial-section">
-        <div class="testimonial-container">
-            <h3 class="testimonial-heading">Client testimonials-</h3>
-            <div class="testimonials grid grid-3-columns">
-                <div class="testimonial">
-                    <figure class="image-box">
-                        <img src="images/image-emily.jpg" alt="Emily image">
+        <div class="testimonials">
+            <h4 class="testimonials__heading">Client testimonials</h4>
+            <div class="grid grid--3-columns grid--gap">
+                <div class="testimonial flow">
+                    <figure class="testimonial__image-wrapper grid grid--content-center">
+                        <img class="testimonial__image" src="images/image-emily.jpg" alt="Emily image">
                     </figure>
-                    <blockquote class="testimonial-text">
+                    <blockquote class="testimonial__text">
                         We put our trust in Sunnyside and they delivered, making sure our needs were met and deadlines
                         were always hit.
                     </blockquote>
-                    <div class="client-information">
-                        <p class="client-name">Emily R.</p>
-                        <p class="client-post">Marketing Director</p>
+                    <div class="testimonial__client-info">
+                        <p class="testimonial__client-name">Emily R.</p>
+                        <p class="testimonial__client-post">Marketing Director</p>
                     </div>
                 </div>
 
-                <div class="testimonial">
-                    <figure class="image-box">
-                        <img src="images/image-thomas.jpg" alt="Thomas Image">
+                <div class="testimonial flow">
+                    <figure class="testimonial__image-wrapper grid grid--content-center">
+                        <img class="testimonial__image" src="images/image-thomas.jpg" alt="Thomas Image">
                     </figure>
-                    <blockquote class="testimonial-text">
+                    <blockquote class="testimonial__text">
                         We put our trust in Sunnyside and they delivered, making sure our needs were met and deadlines
                         were always hit.
                     </blockquote>
-                    <div class="client-information">
-                        <p class="client-name">Thomas S.</p>
-                        <p class="client-post">Chief Operating Officer</p>
+                    <div class="testimonial__client-info">
+                        <p class="testimonial__client-name">Thomas S.</p>
+                        <p class="testimonial__client-post">Chief Operating Officer</p>
                     </div>
                 </div>
 
-                <div class="testimonial">
-                    <figure class="image-box">
-                        <img src="images/image-jennie.jpg" alt="Jennie Image">
+                <div class="testimonial flow">
+                    <figure class="testimonial__image-wrapper grid grid--content-center">
+                        <img class="testimonial__image" src="images/image-jennie.jpg" alt="Jennie Image">
                     </figure>
-                    <blockquote class="testimonial-text">
+                    <blockquote class="testimonial__text">
                         Incredible end result! Our sales increased over 400% when we worked with Sunnyside. Highly
                         recommended!
                     </blockquote>
-                    <div class="client-information">
-                        <p class="client-name">Jennie F.</p>
-                        <p class="client-post">Business Owner</p>
+                    <div class="testimonial__client-info">
+                        <p class="testimonial__client-name">Jennie F.</p>
+                        <p class="testimonial__client-post">Business Owner</p>
                     </div>
                 </div>
             </div>
@@ -139,44 +134,48 @@
     </section>
 
     <section class="gallery-section">
-        <div class="container image-gallery grid grid-4-columns">
-            <div class="image-container"></div>
-            <div class="image-container"></div>
-            <div class="image-container"></div>
-            <div class="image-container"></div>
+        <div class="gallery container grid grid--4-columns">
+            <div class="gallery__image gallery__image--bottle"></div>
+            <div class="gallery__image gallery__image--orange"></div>
+            <div class="gallery__image gallery__image--cone"></div>
+            <div class="gallery__image gallery__image--cubes"></div>
         </div>
     </section>
 
 </main>
 
-<footer class="footer">
-    <div class="footer-container">
-        <a href="#"><img src="images/logo.svg" alt="Sunnyside Logo" class="footer-logo"></a>
-        <nav class="footer-nav">
-            <ul class="footer-nav-list">
-                <li><a href="#" class="footer-nav-link">About</a></li>
-                <li><a href="#" class="footer-nav-link">Services</a></li>
-                <li><a href="#" class="footer-nav-link">Projects</a></li>
+<footer class="footer-section">
+    <div class="footer grid grid--items-center grid--gap">
+        <a href="#" class="footer__logo-link">
+            <img src="images/logo.svg" alt="Sunnyside Logo" class="footer__logo">
+        </a>
+        <nav class="footer__nav">
+            <ul class="footer__nav-list flex flex--gap">
+                <li><a href="#" class="footer__nav-link">About</a></li>
+                <li><a href="#" class="footer__nav-link">Services</a></li>
+                <li><a href="#" class="footer__nav-link">Projects</a></li>
             </ul>
         </nav>
-        <div class="social-media-logos">
-            <a href="#">
-                <ion-icon class="social-media-logo" name="logo-facebook"></ion-icon>
+        <div class="footer__social-logos flex flex--gap">
+            <a href="#" class="footer__social-link">
+                <ion-icon class="footer__social-logo" name="logo-facebook"></ion-icon>
             </a>
-            <a href="#">
-                <ion-icon class="social-media-logo" name="logo-instagram"></ion-icon>
+            <a href="#" class="footer__social-link">
+                <ion-icon class="footer__social-logo" name="logo-instagram"></ion-icon>
             </a>
-            <a href="#">
-                <ion-icon class="social-media-logo" name="logo-twitter"></ion-icon>
+            <a href="#" class="footer__social-link">
+                <ion-icon class="footer__social-logo" name="logo-twitter"></ion-icon>
             </a>
-            <a href="#">
-                <ion-icon class="social-media-logo" name="logo-pinterest"></ion-icon>
+            <a href="#" class="footer__social-link">
+                <ion-icon class="footer__social-logo" name="logo-pinterest"></ion-icon>
             </a>
         </div>
     </div>
 </footer>
 
-<script src="javascript/script.js"></script>
+<div class="overlay hidden"></div>
+
+<script src="js/script.js"></script>
 </body>
 </html>
 
